[package]
name = "AAAAAA"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "AAAAA"
path = "aaa/aaaa"

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.13.0", default-features = false, features = ["macros", "rt"] }
unicode-segmentation = "1.8.0"
unicode_categories = "0.1.1"
